examples/test/testpolicy4430.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4430
  namespace: namespace138
spec:
  podSelector:
    matchLabels:
      key47: value40
      key28: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value44
          key9: value4
          key17: value4
      podSelector:
        matchLabels:
          key40: value25
          key33: value18
